[package]
name = "reverseproxy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
route-recognizer = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url-match = "0.1.7"
